--- a/dashboards/builds.erb
+++ b/dashboards/builds.erb
@@ -1,3 +1,8 @@
+<script type='text/javascript'>
+  $(function() {
+    Dashing.gridsterLayout('[{"col":1,"row":1,"size_x":4,"size_y":1},{"col":1,"row":2,"size_x":1,"size_y":1},{"col":3,"row":2,"size_x":1,"size_y":1},{"col":4,"row":2,"size_x":1,"size_y":1},{"col":2,"row":2,"size_x":1,"size_y":1}]')
+  });
+</script>
 <div class="gridster">
   <ul>
     <% num_cols = (Builds::BUILDS_CONFIG.count > 4) ? 4 : 2 %>
