--- a/dashboards/layout.erb
+++ b/dashboards/layout.erb
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title><%= yield_content(:title) %></title>
+  <title><%= "#{Builds::JENKINS_CONFIG[:project]} Dashboard" %></title>
 
   <!-- The javascript and css are managed by sprockets. The files can be found in the /assets folder-->
   <script type="text/javascript" src="/assets/application.js"></script>
